Bug 1366196 - Simple MAPI: Backout bug 1095629 and solve the problem better. r=aceman